src/test/ui/parser/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.stderr
error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:20:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ------------------ in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:31:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^

error: enum is not supported in `trait`s or `impl`s
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ------------------ in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: struct is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:42:5
   |
LL |     struct BadS;
   |     ^^^^^^^^^^^^

error: enum is not supported in `extern` blocks
  --> $DIR/issue-48137-macros-cannot-interpolate-impl-items-bad-variants.rs:5:9
   |
LL |         enum BadE {}
   |         ^^^^^^^^^
...
LL |     expand_to_enum!();
   |     ------------------ in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

